# Template-OpenAssetIO-Manager-Python

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  code-quality.yml  deploy-pypi.yml  test.yml
plugin/my_asset_manager/: AssetManagerInterface.py  MyAssetManagerInterface.py  __init__.py
tests/: business_logic_suite.py  conftest.py  fixtures.py  requirements.txt  test_apiCompliance.py  test_manager.py
